crates/tmark-writers/tests/snapshots/fixtures__lead@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\tslead{Boot sequence.}

\textbf{Leading bold:} the device powers the flash.

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
