crates/tmark-writers/tests/snapshots/fixtures__link-anchor@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<h2 id="sec:claim">The claim</h2>
<p>As <a href="#sec:claim" class="reference">the claim</a> shows, the watchdog fires twice.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
