crates/tmark-writers/tests/snapshots/fixtures__link-anchor@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\subsection{The claim}\label{sec:claim}

As \hyperref[sec:claim]{the claim} shows, the watchdog fires twice.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
