crates/tmark-writers/tests/snapshots/fixtures__link-anchor@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
== The claim <sec:claim>

As #link(<sec:claim>)[the claim] shows, the watchdog fires twice.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
