crates/tmark-writers/tests/snapshots/fixtures__link-destination-escapes@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\href{b\%20c}{a} \href{e)f}{d} \hyperref[h+si]{g} \includegraphics[width=1em]{k l.png} \href{n(o)p}{m}

---requires---
{
  "packages": [
    "graphicx"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [
    {
      "src": "k l.png",
      "node": 11
    }
  ],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
