crates/tmark-writers/tests/snapshots/fixtures__lint-structure@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
= Top

=== Skipped

#ts-lead[Note.]

#figure(
  table(
    columns: (1fr,),
    align: (left,),
    table.header([a]),
    [1],
  ),
  caption: [T.],
) <fig:t>

---requires---
{
  "packages": [
    "epigraph",
    "graphicx",
    "marginnote",
    "multicol",
    "pdflscape",
    "progressbar",
    "xcolor"
  ],
  "fragments": [
    "ts-typesetting"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
